--- a/Just Login Form/style.css
+++ b/Just Login Form/style.css
@@ -1,124 +1,175 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 
-body{
-    box-sizing: border-box;
-    background-image: linear-gradient(rgba(247, 142, 113, 0.223),rgba(216, 139, 238, 0.108)),url(campus4.jpg);
-    background-size:cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    background-position: center;
-    height: 100vh;
-    background-attachment: fixed;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+@keyframes animate{
+  0%{
+    background-image:url(Background/bg1.jpg);
+  }
+  20%{
+    background-image:url(Background/bg2.jpg);
+  }
+  40%{
+    background-image:url(Background/bg3.jpg);
+  }
+  60%{
+    background-image:url(Background/bg4.jpg);
+  }
+  80%{
+    background-image:url(Background/bg5.jpg);
+  }
+  100%{
+    background-image:url(KIIT-Photo1.jpeg);
+  }
 
+}
+.contact-container {
+  background-image:url(KIIT-Photo1.jpeg);
+  background-size:cover;
+  height: 100vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: 5s;
+  animation: animate 30s ease-in-out infinite alternate-reverse forwards;
+  animation-play-state: running;
+}
 
 .Navbar{
-    display: flex;
-    justify-content: space-between;
-    background-color: #d5d0d0;
-    padding: 10px;
-    margin-bottom: 20px;
-    border-radius: 30px;
-    color: #000080;
-    font-size: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: auto;
+  font-size: 15px;
+  height: auto;
+  background: #dbd6d624;
 }
 .Navbar h1{
-    margin-top: 10px;
-
+  margin-top: 2px;
+  user-select: none;
+  color: #17d059;
 }
 .Navbar img{
-    height: 80px;
+  height: 60px;
+  width: auto;
 }
 .Navbar button{
-    padding: 15px;
-    border-radius: 20px;
-    border: none;
-    font-size: 20px;
-    background-color: rgba(251, 255, 0, 0.605);
+  padding: 10px;
+  border: none;
+  background-color: #17d059;
+  overflow: hidden;
+  border-radius: 5px;
+  cursor: pointer;
 }
 .Navbar a{
-    text-decoration: none;
-    color:rgba(18, 142, 220, 0.995);
-    
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 10px;
 }
-form{
-    
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    padding: 30px;
-    background: rgba(220, 213, 240, 0.929);
-    border-radius: 20px;
-    height:300px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 20px;
-    position: absolute;
-    width: 300px;
-    margin-top: 30px;
-    left: 75%;
-    right: 30%;
-    height: 300px;
-    text-align: center;
-  
-}
-form input{
-    padding: 20px;
-    margin: 10px;
-    background: rgba(86, 135, 242, 0.526);
-    border-radius: 20px;
-    font-size: 20px;
-    outline: none;
-    border: none;
-    align-items: center;
-}
-input[type="submit"]{
-    background-color: black;
-    color: #d5d0d0;
-    cursor: pointer;
+.Navbar button:hover{
+  background-color: #1635e5;
+  transition: 1s;
 }
 
-
-@media (max-width: 1120px) {
-    
+.right {
+  position: absolute;
+  width:300px;
+  left: calc(90% - 400px / 2);
+  height: auto;
+  top: calc(40% - 380px / 2);
+  background: #ffffff;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 10px 10px 20px rgba(73, 73, 73, 0.655);
   
-    form {
-      width: 70%;  /* Make form full-width */
-      position: static;  /* Remove absolute positioning */
-      margin: 0 auto;  /* Center the form horizontally */
-      height: auto;  /* Let content determine height */
-      top: 0;  /* Reset top position */
-    }
-  
-    form input{
-      width: calc(90% - 20px);  /* Make inputs and select full-width */
-      margin-bottom: 10px;  
-      display: flex;
-      align-items: center;
-      text-align: center;
-      justify-content: center;
-      width:90%;/* Add spacing between elements */
-    }
+}
 
-    .Navbar button {
-      display: block;  /* Stack button below links for narrower screens */
-      margin-top: 10px;
-          /* Add spacing between links and button */
-    }
-  }
+.title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 80px;
+  align-items: center;
+  color: #1635e5;
+}
 
-  @media (max-width: 550px) {
-    .Navbar{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-    
-  }
+.logo {
+  width: auto;
+  height: 50px;
+  margin-top:-20px;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 10px;
+  color: #0b0b0b;
+  padding: 5px 5px 5px 5px;
+  border: 2px solid #6c6c6c;
+  width: 180px;
+  height: 45px;
+  margin: 15px;
+  border-radius: 25px;
+  box-sizing: border-box;
+  text-align: center;
+  overflow: hidden;
+}
 
 
-  
+input[type="checkbox"] {
+  vertical-align: middle;
+  margin-right: 3px;
+  margin-bottom: 3px;
+  height: 8px;
+  width: 8px;
+}
+
+::placeholder {
+  color: #3d3e4197;
+  font-size: 15px;
+}
+
+.icon {
+  position: absolute;
+  padding: 24px 32px;
+  height: 75px;
+  width: 90px;
+}
+
+.keepme {
+  margin: 0 0px 5px;
+  color: rgb(80, 79, 79);
+  font-weight: bold;
+}
+
+.right button {
+  width: 160px;
+  height: 45px;
+  left: 1273px;
+  top: 780px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 28px;
+  cursor: pointer;
+  color: #ffffff;
+  border: none;
+  background: rgba(54, 19, 193, 0.89);
+  border-radius: 25px;
+}
+
+.link {
+  text-align: center;
+  display: block;
+  margin: 5px 5px 10px 5px;
+  color: #71a1bd;
+  text-decoration: none;
+}
+
